# sim-gateway

./: Cargo.toml
configs/: sample_config.toml
src/: events.rs  gui.rs  main.rs  model.rs  runtime.rs
src/events/: commands.rs  events.rs  statistics.rs
src/gui/: gui.rs
src/model/: arguments.rs  config.rs  constants.rs  filters.rs  transformers.rs
src/runtime/: operations.rs  runtime.rs
