[package]
name = "sim-gateway"
version = "0.1.0"
authors = ["Zeeger <zeeger@lubsen.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33.3"
toml = "0.5.8"
strum = { version = "0.21.0", features = ["derive"] }
serde = "1.0.130"
serde_derive = "1.0.130"
lazy_static = "1.4.0"
tokio = { version = "1.13.0", features = ["full"] }
bytes = "1.1.0"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = "0.22.1"